2006-02-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/convert-ly.py (lilypond_version_re_str): Move from
	convertrules.  Add explicit grouping, needed for python2.2.

2006-02-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/NEWS.tely (Top): Mention code cleanup.

2006-02-07  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/global.itely: fix line-width in (text) docs.

	* Documentation/user/lilypond-book.itely: same.

2006-02-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely (Top): document new variable
	naming.

	* flower/include/array.icc (Message): remove file.

	* flower/include/std-vector.hh: make sure vsize and VPOS are
	defined for binary_search_bounds().

	* flower/std-string.cc (std): add to_string(long unsigned).

	* configure.in (gui_b): excise std_string option.
	(gui_b): excise std_vector option.

	* flower/string.cc (Module): excise flower array & string

	* flower/include/std-string.hh: excise flower string.

	* {ly,lily,scm}/*: use dashes in \paper and \layout variables

	* python/convertrules.py (lilypond_version_re_str): require
	only numbers and dots in \version string.

2006-02-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/system-start-delimiter.cc (print): allow style = text too.

	* lily/system-start-delimiter-engraver.cc
	(acknowledge_system_start_text): new function, also add add to
	support of system-start-text (instrument names). This fixes
	instrument names on piano staves.

	* lily/instrument-name-engraver.cc: rewrite. Use
	system-start-delimiter approach. This save memory and cpu.

	* scm/define-grobs.scm (all-grob-descriptions): remove
	instrument-name from break-alignment.

	* mf/GNUmakefile ($(NCSB_TTFS)): depend on pfx2ttf script too.

2006-02-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/generic-vars.make (LOOP): Add PLUS to keep -j
	jobserver going.

	* configure.in (std_vector): On by default.

	* lily/include/font-metric.hh: