@@ -451,6 +451,7 @@ AncientRemoveEmptyStaffContext = \context {
   \consists "Stanza_number_align_engraver"
   \consists "Bar_number_engraver"
   \consists "Tweak_engraver"
+  \consists "Parenthesis_engraver"
   
   \defaultchild "Staff"
 
