@@ -899,9 +899,7 @@
 	))
     (LyricText
      . (
-
 	(stencil . ,ly:text-interface::print)
-
 	(X-offset . ,ly:self-alignment-interface::aligned-on-x-parent)
 	(self-alignment-X . 0)
 	(word-space . 0.6)
