@@ -1,3 +1,13 @@
+2006-02-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* input/sakura-sakura.ly: document how to override font.
+
+	* input/regression/font-family-override.ly:  doc -dshow-available-fonts
+
+2006-02-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/midi-item.cc (to_string): truncate time sig at 255 beats.
+
 2006-02-08  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scripts/convert-ly.py (lilypond_version_re_str): Move from
@@ -14,6 +24,8 @@
 	* Documentation/user/lilypond-book.itely: same.
 
 2006-02-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* VERSION (PACKAGE_NAME): release 2.7.32
 
 	* Documentation/topdocs/NEWS.tely (Top): document new variable
 	naming.
